# xterm-rust

./: Cargo.toml  README.md
doc/: search-index.js
doc/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
doc/implementors/core/fmt/: trait.Show.js
doc/main/: index.html  stability.html  stability.json
doc/mod/: fn.cleanup.html  fn.draw_frame.html  fn.jump.html  fn.make_jump.html  fn.page.html  index.html  stability.html  stability.json  struct.Frame.html  struct.Point.html
doc/mod/color/: enum.Colors.html  fn.color.html  fn.color_bg.html  fn.color_fg.html  fn.line_split.html  index.html
doc/mod/nav/: fn.cleanup.html  fn.draw_frame.html  fn.jump.html  fn.jump_string.html  fn.new_frame.html  fn.page.html  fn.restore_cursor.html  fn.save_cursor.html  index.html  struct.Frame.html  struct.Point.html
doc/mod/xvec/: enum.XString.html  fn.line_split.html  fn.make_jump.html  fn.print_x.html  index.html  struct.XVec.html
doc/src/main/src/: main.rs.html
doc/src/mod/: color.rs.html  mod.rs.html  nav.rs.html  xvec.rs.html
doc/src/mod/src/xterm/: color.rs.html  mod.rs.html  xvec.rs.html
marks/: modern terminal.md
notes/: xterm.md
src/: .#main.rs  lib.rs  main.rs  main.rs.racertmp  xterm.rs
src/xterm/: .#color.rs  .#xvec.rs  color.rs  escs.rs  mod.rs  nav.rs  nav.rs.racertmp  xvec.rs
