[package]

name = "xterm"
version = "0.0.1"
authors = ["sam atman <atmanistan@gmail.com>"]

description = "xterm library"


homepage = "https://github.com/mnemnion/xterm-rust"
repository = "https://github.com/mnemnion/xterm-rust"

readme = "README.md"

keywords = ["xterm", "vt100", "ansi"]


license = "BSD-2-Clause"

